--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
 	<script src="mjs/TH-ifelse.js"></script>
 	<script src="mjs/TH-variable.js"></script>
+	<script src="mjs/TH-Array.js"></script>
 </body>
 </html>
