--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 	<script src="mjs/TH-ifelse.js"></script>
 	<script src="mjs/TH-variable.js"></script>
 	<script src="mjs/TH-Array.js"></script>
+	<script src="mjs/TH-function.js"></script>
 </body>
 </html>
